--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+	margin: 0;
+	padding: 0;
 }
-body{
-background: #ccc;
+body {
+	background: rgb(72, 151, 156);
 }
-.container{
-margin: auto;
+h1 {
+	color: orange;
+	text-align: center;
+	padding: 20px;
+}
+
+.container {
+	margin: auto;
+	width: 750px;
+	background: #fff;
+	border-radius: 4px;
 }
